[package]
name = "palm"
version = "0.1.0"
edition = "2018"
authors = ["Jeremy Zheng <jitang.zheng@gmail.com>"]
description = "A total free education & translation & ops solution."
homepage = "https://github.com/saturn-xiv/palm"

[profile.release]
lto = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
mime = "0.3"
language-tags = "0.3"
juniper_actix = "0.4"
log = "0.4"
serde-xml-rs = "0.4"
yaml-rust = "0.4"
actix-multipart = "0.4.0-beta.5"
actix-session = "0.5.0-beta.2"
toml = "0.5"
actix-files = "0.6.0-beta.6"
encoding_rs = "0.8"
r2d2 = "0.8"
rand = "0.8"
xml-rs = "0.8"
env_logger = "0.9"
ssh2 = "0.9"
paho-mqtt = "0.9"
askama = "0.10"
lettre = "0.10.0-rc.3"
actix = "0.12"
base64 = "0.13"
git2 = "0.13"
juniper = "0.15"
ipnetwork = "0.18"
nix = "0.22"
# quick-xml = "0.22"
rusoto_core = "0.47"
rusoto_credential = "0.47"
rusoto_s3 = "0.47"
bytes = "1"
bytesize = "1"
eui48 = "1"
lazy_static = "1"
regex = "1"
serde_json = "1"
flexbuffers = "2"
humantime = "2"
lapin = "2.0.0-alpha.4"
percent-encoding = "2"
actix-http = "3.0.0-beta.8"
clap = "3.0.0-beta.2"
tempfile = "3"
actix-web = "4.0.0-beta.8"
handlebars = "4"
serialport = "4"
actix-cors = "0.6.0-beta.2"
amq-protocol-uri = "7.0.0-alpha.7"
jsonwebtoken = "7"

[dependencies.chrono]
version = "0.4"
features = ["serde"]

[dependencies.chrono-tz]
version = "0.5"
features = ["serde"]

[dependencies.uuid]
version = "0.8"
features = ["v4", "serde"]

[dependencies.zmq]
version = "0.9"
features = ["vendored"]

[dependencies.reqwest]
version = "0.11"
features = ["json"]

[dependencies.hyper]
version = "0.14"
features = ["full"]

[dependencies.validator]
version = "0.14"
features = ["derive"]

[dependencies.cookie]
version = "0.15"
features = ["secure", "private", "percent-encode"]

[dependencies.redis]
version = "0.20"
features = ["r2d2"]

[dependencies.diesel]
version = "1"
default-features = false
features = ["postgres", "mysql", "sqlite", "chrono", "serde_json", "uuid", "numeric", "r2d2", "128-column-tables"]

[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies.tokio]
version = "1"
features = ["full"]

[dependencies.url]
version = "2"
features = ["serde"]

[dependencies.openssl]
version = "*"
features = ["vendored"]
