[package]
name = "aloe"
version = "2023.3.1"
edition = "2021"
authors = ["Jeremy Zheng <jitang.zheng@gmail.com>"]
description = "A router software inspired by OpenWrt"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dependencies.diesel]
version = "2"
default-features = false
features = ["bigdecimal", "sqlite", "extras", "128-column-tables"]


[dependencies.palm]
path = '../palm'
