[package]
name = "azalea"
version = "2024.9.23"
edition = "2021"
authors = ["Jeremy Zheng <jitang.zheng@gmail.com>"]
description = "A free and open server-side data processing pipeline that ingests data from a multitude of sources."

[dependencies]
log = "0.4"
juniper_actix = "0.6"
actix-cors = "0.7"
actix-identity = "0.8"
env_logger = "0.11"
askama = "0.12"
actix-web-lab = "0.22"
data-encoding = "2"
opensearch = "2"

[dependencies.chrono]
version = "0.4"
features = ["serde", "std"]

[dependencies.actix-session]
version = "0.10"
features = ["cookie-session", "redis-session"]

[dependencies.juniper]
version = "0.16"
features = ["chrono"]

[dependencies.nix]
version = "0.29"
features = ["process", "user"]

[dependencies.hyper]
version = "1"
features = ["full"]

[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies.tokio]
version = "1"
features = ["full"]

[dependencies.clap]
version = "4"
features = ["derive"]

[dependencies.actix-web]
version = "4"
features = ["cookies"]

[dependencies.petunia]
path = '../petunia'
