[package]
name = "bougainvillea"
version = "2024.4.2"
edition = "2021"
authors = ["Jeremy Zheng <jitang.zheng@gmail.com>"]
description = "An online journal analysis system."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
actix-files = "0.6"
env_logger = "0.11"
askama = "0.12"
data-encoding = "2"

[dependencies.chrono]
version = "0.4"
features = ["serde", "std"]

[dependencies.actix-session]
version = "0.9"
features = ["cookie-session"]

[dependencies.hyper]
version = "1"
features = ["full"]

[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies.tokio]
version = "1"
features = ["full"]

[dependencies.clap]
version = "4"
features = ["derive"]

[dependencies.actix-web]
version = "4"
features = ["cookies"]

[dependencies.palm]
path = '../palm'
