[package]
name = "camelia"
version = "2024.3.5"
edition = "2021"
description = "A portal application."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
language-tags = "0.3"
mime = "0.3"
log = "0.4"
actix-files = "0.6"
actix-multipart = "0.6"
serde_yaml = "0.9"
askama = "0.12"
prost = "0.12"
rust-ini = "0.21"
serde_json = "1"
data-encoding = "2"
flexbuffers = "2"
handlebars = "5"

[dependencies.chrono]
version = "0.4"
features = ["serde", "std"]

[dependencies.chrono-tz]
version = "0.9"
features = ["serde"]

[dependencies.rand]
version = "0.8"
features = ["small_rng"]

[dependencies.reqwest]
version = "0.12"
features = ["json", "cookies"]

[dependencies.juniper]
version = "0.16"
features = ["chrono"]

[dependencies.validator]
version = "0.18"
features = ["derive", "card", "unic"]

[dependencies.strum]
version = "0.26"
features = ["derive"]

[dependencies.diesel-adapter]
version = "1"
features = ["postgres"]

[dependencies.hyper]
version = "1"
features = ["full"]

[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies.tokio]
version = "1"
features = ["full"]

[dependencies.uuid]
version = "1"
features = ["v4", "serde"]

[dependencies.casbin]
version = "2"
features = ["watcher", "cached"]

[dependencies.diesel]
version = "2"
default-features = false
features = [
    "bigdecimal",
    "postgres",
    "mysql",
    "sqlite",
    "extras",
    "128-column-tables",
]

[dependencies.actix-web]
version = "4"
features = ["cookies"]

[dependencies.openssl]
version = "*"
features = ["vendored"]

[dependencies.palm]
path = '../palm'
