[package]
name = "carnation"
version = "2024.9.25"
edition = "2021"
description = "A content management system focused on flexibility and user experience(inspired by Grav)."

[dependencies]
language-tags = "0.3"
log = "0.4"
actix-session = "0.10"
askama = "0.12"
casbin = "2"
data-encoding = "2"
flexbuffers = "2"

[dependencies.chrono]
version = "0.4"
features = ["serde", "std"]

[dependencies.juniper]
version = "0.16"
features = ["chrono"]

[dependencies.validator]
version = "0.18"
features = ["derive"]

[dependencies.strum]
version = "0.26"
features = ["derive"]

[dependencies.hyper]
version = "1"
features = ["full"]

[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies.tokio]
version = "1"
features = ["full"]

[dependencies.diesel]
version = "2"
default-features = false
features = ["postgres", "extras", "128-column-tables"]

[dependencies.actix-web]
version = "4"
features = ["cookies"]

[dependencies.petunia]
path = '../petunia'

[dependencies.daffodil]
path = '../daffodil'
