[package]
name = "daffodil"
version = "2024.5.14"
edition = "2021"
description = "A personal and small-business financial-accounting software"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
language-tags = "0.3"
mime = "0.3"
log = "0.4"
askama = "0.12"
prost = "0.12"
serde_json = "1"

[dependencies.chrono]
version = "0.4"
features = ["serde", "std"]

[dependencies.chrono-tz]
version = "0.9"
features = ["serde"]

[dependencies.juniper]
version = "0.16"
features = ["chrono"]

[dependencies.validator]
version = "0.18"
features = ["derive", "card", "unic"]

[dependencies.strum]
version = "0.26"
features = ["derive"]

[dependencies.hyper]
version = "1"
features = ["full"]

[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies.tokio]
version = "1"
features = ["full"]

[dependencies.diesel]
version = "2"
default-features = false
features = [
    "bigdecimal",
    "postgres",
    "mysql",
    "sqlite",
    "extras",
    "128-column-tables",
]

[dependencies.actix-web]
version = "4"
features = ["cookies"]

[dependencies.palm]
path = '../palm'

[dependencies.hibiscus]
path = '../hibiscus'

[dependencies.camelia]
path = '../camelia'
