[package]
name = "daffodil"
version = "2024.9.25"
edition = "2021"

[dependencies]
language-tags = "0.3"
mime = "0.3"
log = "0.4"
yaml-rust = "0.4"
argon2 = "0.5"
aes = "0.8"
actix-session = "0.10"
sha2 = "0.10"
aes-gcm-siv = "0.11"
askama = "0.12"
tonic = "0.12"
prost = "0.13"
prost-types = "0.13"
casbin = "2"
data-encoding = "2"
flexbuffers = "2"

[dependencies.chrono]
version = "0.4"
features = ["serde", "std"]

[dependencies.chrono-tz]
version = "0.10"
features = ["serde"]

[dependencies.juniper]
version = "0.16"
features = ["chrono"]

[dependencies.strum]
version = "0.26"
features = ["derive"]

[dependencies.nix]
version = "0.29"
features = ["user"]

[dependencies.diesel-adapter]
version = "1"
features = ["postgres"]

[dependencies.hyper]
version = "1"
features = ["full"]

[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies.tokio]
version = "1"
features = ["full"]

[dependencies.uuid]
version = "1"
features = ["v4", "serde"]

[dependencies.diesel]
version = "2"
default-features = false
features = ["postgres", "extras", "128-column-tables"]

[dependencies.actix-web]
version = "4"
features = ["cookies"]

[dependencies.petunia]
path = '../petunia'
