[package]
name = "fig"
version = "2024.3.1"
edition = "2021"
authors = ["Jeremy Zheng <jitang.zheng@gmail.com>"]
description = "A total free education & translation solution."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
env_logger = "0.11"
askama = "0.12"

[dependencies.chrono]
version = "0.4"
features = ["serde", "std"]

[dependencies.hyper]
version = "1"
features = ["full"]

[dependencies.nix]
version = "0.28"
features = ["user"]

[dependencies.diesel]
version = "2"
default-features = false
features = [
    "bigdecimal",
    "postgres",
    "mysql",
    "sqlite",
    "extras",
    "128-column-tables",
]

[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies.tokio]
version = "1"
features = ["full"]

[dependencies.casbin]
version = "2"
features = ["watcher", "cached"]

[dependencies.clap]
version = "4"
features = ["derive"]

[dependencies.palm]
path = '../palm'

[dependencies.camelia]
path = '../camelia'
