[package]
name = "fig"
version = "2024.3.1"
edition = "2021"
authors = ["Jeremy Zheng <jitang.zheng@gmail.com>"]
description = "A total free education & translation solution."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
juniper_actix = "0.5"
actix-cors = "0.7"
actix-identity = "0.7"
env_logger = "0.11"
askama = "0.12"
actix-web-lab = "0.20"
data-encoding = "2"

[dependencies.chrono]
version = "0.4"
features = ["serde", "std"]

[dependencies.actix-session]
version = "0.9"
features = ["cookie-session", "redis-rs-session"]

[dependencies.juniper]
version = "0.16"
features = ["chrono"]

[dependencies.hyper]
version = "1"
features = ["full"]

[dependencies.nix]
version = "0.28"
features = ["user"]

[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies.tokio]
version = "1"
features = ["full"]

[dependencies.casbin]
version = "2"
features = ["watcher", "cached"]

[dependencies.diesel]
version = "2"
default-features = false
features = [
    "bigdecimal",
    "postgres",
    "mysql",
    "sqlite",
    "extras",
    "128-column-tables",
]

[dependencies.clap]
version = "4"
features = ["derive"]

[dependencies.actix-web]
version = "4"
features = ["cookies"]

[dependencies.palm]
path = '../palm'

[dependencies.camelia]
path = '../camelia'

[dependencies.daffodil]
path = '../daffodil'
