[package]
name = "hibiscus"
version = "2024.5.6"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
ab_glyph = "0.2"
futures = "0.3"
language-tags = "0.3"
mime = "0.3"
log = "0.4"
rabbitmq-stream-client = "=0.4.1"
actix-files = "0.6"
actix-multipart = "0.6"
robotxt = "0.6"
actix-cors = "0.7"
actix-identity = "0.7"
encoding_rs = "0.8"
r2d2 = "0.8"
toml = "0.8"
serde_yaml = "0.9"
kafka = "0.10"
zmq = "0.10"
askama = "0.12"
paho-mqtt = "0.12"
prost = "0.12"
prost-types = "0.12"
thrift = "0.17"
actix-web-lab = "0.20"
imageproc = "0.24"
image = "0.25"
amqprs = "1"
aws-credential-types = "1"
aws-sdk-config = "1"
aws-sdk-s3 = "1"
aws-sdk-sqs = "1"
byteorder = "1"
bytes = "1"
lazy_static = "1"
serde_json = "1"
sitewriter = "1"
twilio = "1"
data-encoding = "2"
flexbuffers = "2"
opensearch = "2"
percent-encoding = "2"
tempfile = "3"
handlebars = "5"
google-youtube3 = "5"
jsonwebtoken = "9"
flatbuffers = "24"

[dependencies.tink-core]
version = "0.2"
features = ["insecure"]

[dependencies.chrono]
version = "0.4"
features = ["serde", "std"]

[dependencies.rand]
version = "0.8"
features = ["small_rng"]

[dependencies.actix-session]
version = "0.9"
features = ["cookie-session", "redis-rs-session"]

[dependencies.chrono-tz]
version = "0.9"
features = ["serde"]

[dependencies.snow]
version = "0.9"
features = ["ring-accelerated"]

[dependencies.tonic]
version = "0.11"
features = ["transport"]

[dependencies.reqwest]
version = "0.12"
features = ["json", "cookies"]

[dependencies.juniper]
version = "0.16"
features = ["chrono"]

[dependencies.cookie]
version = "0.18"
features = ["secure", "private", "percent-encode"]

[dependencies.validator]
version = "0.18"
features = ["derive", "card", "unic"]

[dependencies.redis]
version = "0.25"
features = ["tokio-comp", "r2d2", "cluster", "connection-manager"]

[dependencies.strum]
version = "0.26"
features = ["derive"]

[dependencies.nix]
version = "0.28"
features = ["user", "process"]

[dependencies.quick-xml]
version = "0.31"
features = ["serialize"]

[dependencies.aws-config]
version = "1"
features = ["behavior-version-latest"]

[dependencies.hyper]
version = "1"
features = ["full"]

[dependencies.eui48]
version = "1"
default-features = false
features = ["disp_hexstring", "serde_bytes"]

[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies.tokio]
version = "1"
features = ["full"]

[dependencies.uuid]
version = "1"
features = ["v4", "serde"]

[dependencies.casbin]
version = "2"
features = ["watcher", "cached"]

[dependencies.ipnet]
version = "2"
features = ["serde"]

[dependencies.rss]
version = "2"
features = ["validation"]

[dependencies.url]
version = "2"
features = ["serde"]

[dependencies.actix-web]
version = "4"
features = ["cookies"]

# [dependencies.thrift]
# git = "https://github.com/apache/thrift.git"
# tag = "v0.20.0"

[dependencies.openssl]
version = "*"
features = ["vendored"]
