[package]
name = "orchid"
version = "2024.3.5"
edition = "2021"
description = "WeChat oauth2 & mini-program services."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
toml = "0.8"
env_logger = "0.11"
tonic-health = "0.11"
prost = "0.12"
prost-types = "0.12"
serde_json = "1"

[dependencies.chrono]
version = "0.4"
features = ["serde"]

[dependencies.tonic]
version = "0.11"
features = ["transport"]

[dependencies.reqwest]
version = "0.12"
features = ["json", "cookies"]

[dependencies.validator]
version = "0.18"
features = ["derive", "card", "unic"]

[dependencies.redis]
version = "0.25"
features = ["tokio-comp", "r2d2", "cluster", "connection-manager"]

[dependencies.hyper]
version = "1"
features = ["full"]

[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies.tokio]
version = "1"
features = ["full"]

[dependencies.uuid]
version = "1"
features = ["v4", "serde"]

[dependencies.clap]
version = "4"
features = ["derive"]

[dependencies.palm]
path = '../palm'
