[package]
name = "palm"
version = "2024.3.4"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
minio = "0.1"
tink-aead = "0.2"
tink-mac = "0.2"
tink-proto = "0.2"
futures = "0.3"
language-tags = "0.3"
mime = "0.3"
log = "0.4"
rabbitmq-stream-client = "0.4"
robotxt = "0.5"
actix-files = "0.6"
actix-multipart = "0.6"
actix-cors = "0.7"
actix-identity = "0.7"
encoding_rs = "0.8"
r2d2 = "0.8"
toml = "0.8"
rusttype = "0.9"
serde_yaml = "0.9"
zmq = "0.10"
askama = "0.12"
paho-mqtt = "0.12"
prost = "0.12"
prost-types = "0.12"
actix-web-lab = "0.20"
imageproc = "0.23"
image = "0.24"
amqprs = "1"
aws-credential-types = "1"
aws-sdk-config = "1"
aws-sdk-s3 = "1"
aws-sdk-sqs = "1"
byteorder = "1"
bytes = "1"
lazy_static = "1"
serde_json = "1"
sitewriter = "1"
twilio = "1"
data-encoding = "2"
flexbuffers = "2"
opensearch = "2"
percent-encoding = "2"
tempfile = "3"
handlebars = "5"
google-youtube3 = "5"
jsonwebtoken = "9"
flatbuffers = "23"

[dependencies.tink-core]
version = "0.2"
features = ["insecure"]

[dependencies.chrono]
version = "0.4"
features = ["serde", "std"]

[dependencies.chrono-tz]
version = "0.8"
features = ["serde"]

[dependencies.rand]
version = "0.8"
features = ["small_rng"]

[dependencies.actix-session]
version = "0.9"
features = ["cookie-session", "redis-rs-session"]

[dependencies.snow]
version = "0.9"
features = ["ring-accelerated"]

[dependencies.lettre]
version = "0.11"
features = ["mime03"]

[dependencies.reqwest]
version = "0.11"
features = ["json", "cookies"]

[dependencies.tonic]
version = "0.11"
features = ["transport"]

[dependencies.validator]
version = "0.16"
features = ["derive", "phone", "card", "unic"]

[dependencies.cookie]
version = "0.18"
features = ["secure", "private", "percent-encode"]

[dependencies.redis]
version = "0.24"
features = ["tokio-comp", "r2d2", "cluster", "connection-manager"]

[dependencies.strum]
version = "0.26"
features = ["derive"]

[dependencies.nix]
version = "0.28"
features = ["user", "process"]

[dependencies.quick-xml]
version = "0.31"
features = ["serialize"]

[dependencies.aws-config]
version = "1"
features = ["behavior-version-latest"]

[dependencies.hyper]
version = "1"
features = ["full"]

[dependencies.eui48]
version = "1"
default-features = false
features = ["disp_hexstring", "serde_bytes"]

[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies.tokio]
version = "1"
features = ["full"]

[dependencies.uuid]
version = "1"
features = ["v4", "serde"]

[dependencies.casbin]
version = "2"
features = ["watcher", "cached"]

[dependencies.ipnet]
version = "2"
features = ["serde"]

[dependencies.rss]
version = "2"
features = ["validation"]

[dependencies.url]
version = "2"
features = ["serde"]

[dependencies.actix-web]
version = "4"
features = ["cookies"]

[dependencies.openssl]
version = "*"
features = ["vendored"]

[build-dependencies]
tonic-build = "0.11"
