[package]
name = "palm"
version = "2024.5.9"
edition = "2021"

[dependencies]
log = "0.4"
prost = "0.12"
prost-types = "0.12"
thrift = "0.17"
data-encoding = "2"

[dependencies.chrono]
version = "0.4"
features = ["serde", "std"]

[dependencies.rand]
version = "0.8"
features = ["small_rng"]

[dependencies.tonic]
version = "0.11"
features = ["transport"]

[dependencies.hyper]
version = "1"
features = ["full"]

[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies.uuid]
version = "1"
features = ["v4", "serde"]

[build-dependencies]
tonic-build = "0.11"
